[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/MainMenu/NetworkMenu/Fonts/HeadingDynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainMenu/NetworkMenu/Fonts/OptionDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MainMenu/NetworkMenu/NetworkMenu.gd" type="Script" id=4]

[node name="NetworkMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -140.0
margin_right = 320.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMargin" type="MarginContainer" parent="MultiplayerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -46.0
margin_right = 312.0
margin_bottom = 46.0
custom_constants/margin_right = 32
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsVBox" type="VBoxContainer" parent="MultiplayerPanel/OptionsMargin"]
margin_left = 16.0
margin_right = 592.0
margin_bottom = 92.0
custom_constants/separation = 16

[node name="PlayerNameContainer" type="HBoxContainer" parent="MultiplayerPanel/OptionsMargin/OptionsVBox"]
margin_right = 576.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="PlayerNameLabel" type="Label" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/PlayerNameContainer"]
margin_top = 2.0
margin_right = 222.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
text = "Player Name :"
align = 1

[node name="PlayerNameLineEdit" type="LineEdit" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/PlayerNameContainer"]
margin_left = 226.0
margin_right = 576.0
margin_bottom = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsHBox" type="HBoxContainer" parent="MultiplayerPanel/OptionsMargin/OptionsVBox"]
margin_top = 54.0
margin_right = 576.0
margin_bottom = 92.0
custom_constants/separation = 64

[node name="ServerIPContainer" type="HBoxContainer" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox"]
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="IPLabel" type="Label" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox/ServerIPContainer"]
margin_top = 2.0
margin_right = 41.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
text = "IP :"
align = 1

[node name="IPLineEdit" type="LineEdit" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox/ServerIPContainer"]
margin_left = 45.0
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPortContainer" type="HBoxContainer" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox"]
margin_left = 320.0
margin_right = 576.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox/ServerPortContainer"]
margin_top = 2.0
margin_right = 89.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
text = "Port :"
align = 1

[node name="PortLineEdit" type="LineEdit" parent="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox/ServerPortContainer"]
margin_left = 93.0
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsMargin" type="MarginContainer" parent="MultiplayerPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsHBox" type="HBoxContainer" parent="MultiplayerPanel/ButtonsMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 68.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MultiplayerPanel/ButtonsMargin/ButtonsHBox"]
margin_right = 186.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MultiplayerPanel/ButtonsMargin/ButtonsHBox"]
margin_left = 218.0
margin_right = 405.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="MultiplayerPanel/ButtonsMargin/ButtonsHBox"]
margin_left = 437.0
margin_right = 624.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadingLabel" type="Label" parent="MultiplayerPanel"]
anchor_right = 1.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 2 )
text = "Multiplayer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -240.0
margin_right = 210.0
margin_bottom = 240.0

[node name="HeadingLabel" type="Label" parent="LobbyPanel"]
anchor_right = 1.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsMargin" type="MarginContainer" parent="LobbyPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsHBox" type="HBoxContainer" parent="LobbyPanel/ButtonsMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 412.0
margin_bottom = 68.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="LobbyPanel/ButtonsMargin/ButtonsHBox"]
margin_right = 186.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="LobbyPanel/ButtonsMargin/ButtonsHBox"]
margin_left = 218.0
margin_right = 404.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="LobbyPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -130.0
margin_right = 170.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="MultiplayerPanel/OptionsMargin/OptionsVBox/PlayerNameContainer/PlayerNameLineEdit" to="." method="_on_PlayerNameLineEdit_text_changed"]
[connection signal="text_changed" from="MultiplayerPanel/OptionsMargin/OptionsVBox/OptionsHBox/ServerIPContainer/IPLineEdit" to="." method="_on_IPLineEdit_text_changed"]
[connection signal="pressed" from="MultiplayerPanel/ButtonsMargin/ButtonsHBox/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MultiplayerPanel/ButtonsMargin/ButtonsHBox/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="MultiplayerPanel/ButtonsMargin/ButtonsHBox/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="LobbyPanel/ButtonsMargin/ButtonsHBox/LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="LobbyPanel/ButtonsMargin/ButtonsHBox/StartButton" to="." method="_on_StartButton_pressed"]
